--- a/example-bundle.html
+++ b/example-bundle.html
@@ -3,6 +3,7 @@
 	<head>
 		<script src="./node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
 		<script type="module">
+			// include the single file bundle
 			import './build-bundle/components.js';
 		</script>
 		<title>Bundled Build Test</title>
@@ -11,6 +12,7 @@
 		<meta charset="UTF-8">
 	</head>
 	<body>
+		<d2l-loading-spinner></d2l-loading-spinner>
 		<d2l-button>Click me!</d2l-button>
 	</body>
 </html>
