Fixed verbiage of build types to 'bundled' and 'unbundled', cleaned up some writing, removed package-lock

--- a/example-bundled.html
+++ b/example-bundled.html
@@ -3,7 +3,8 @@
 	<head>
 		<script src="./node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
 		<script type="module">
-			// include the single file bundle
+			// Include the single file bundle.
+			// It will define each custom element that is bundled in it.
 			import './build-bundle/components.js';
 		</script>
 		<title>Bundled Build Test</title>
