--- a/example.html
+++ b/example.html
@@ -3,7 +3,7 @@
 	<head>
 		<script src="./node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
 		<script type="module">
-			// include each component you intend to use
+			// Import each component you intend to use.
 			import './build/loading-spinner.js';
 			import './build/button.js';
 		</script>
