--- a/example-bundled.html
+++ b/example-bundled.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<script src="./node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+		<script crossorigin src="https://www.unpkg.com/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
 		<script type="module">
 			// Include the single file bundle.
 			// It will define each custom element that is bundled in it.
