--- a/example.html
+++ b/example.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<script src="./node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+		<script crossorigin src="https://www.unpkg.com/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
 		<script type="module">
 			// Import each component you intend to use.
 			import './build/loading-spinner.js';
